# bvme

assignment1/doc/: Main.tex
assignment1/implementation/: bonus.m  results.txt  task1.m  task1_g.m  task1_h.m  task1_mse.m  task1_rotate_bicubic.m  task1_rotate_bilinear.m  task1_rotate_nn.m  task1_transform.m  task2.m  task2_border.m  task2_conv.m  task2_filter.m  task2_gen_avg.m  task2_gen_gauss.m  task2_median.m  task2_psnr.m  task3.m
assignment2/doc/: Main.tex
assignment2/implementation/: SIFTdescriptor.m  display_matches.m  harris.m  rot_mat.m  simple_matching.m  task1.m  task2.m  task3.m
assignment3/doc/: Main.tex
assignment3/implementation/: CMakeLists.txt  classifier.cpp  classifier.h  filterbank.cpp  filterbank.h  helper.cpp  helper.h  learndictionary.cpp  learndictionary.h  main.cpp  preprocessimage.cpp  preprocessimage.h
assignment4/doc/: Main.tex
assignment4/implementation/: CMakeLists.txt
assignment4/implementation/src/: Definitions.h  main.cpp  meanshifttracker.cpp  meanshifttracker.h
